--- a/build.properties
+++ b/build.properties
@@ -9,7 +9,7 @@
 ## mod
 ##-------------------
 
-mod.id = awairo.common
+mod.id = awairo.commons
 mod.name = AwA mod commons
 mod.filename.prefix = AwA-commons
 
