convert lf to crlf.

--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>AwAModCommons</name>
-	<comment>AwA Minecraft's Mod Commons</comment>
+	<comment>AwA Minecraft&apos;s Mod Commons</comment>
 	<projects>
 	</projects>
 	<buildSpec>
